--- a/style.css
+++ b/style.css
@@ -11,16 +11,16 @@ body{
 
 .form-field{
     background: rgba(255, 255, 255, 0.2);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
-display: flex;
-flex-direction: column;
-text-align: center;
-justify-content: center;
-padding: 1.5em;
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding: 1.5em;
 
 }
 
@@ -98,11 +98,49 @@ padding: 1.5em;
     border: 1px solid rgba(255, 255, 255, 0.3);
    
 }
-/*@media only screen and (max-width: 600px) {
-    body {
-      
-    }
-  }*/
+
+
+  @media only screen and (min-width: 768px) {
+        .form-field{
+            padding-left: 5em;
+            padding-right: 5em;
+        }
+
+        .even-num-btn{
+            width: 45%;
+        }
+
+        .results{
+            margin-left: 4em;
+            margin-right: 4em;
+            
+        }
+  }
+  
+  @media only screen and (min-width: 1024px){
+      .form-field{
+          padding-left: 12em;
+          padding-right: 12em;
+        }
+
+        .results{
+            margin-left: 8em;
+            margin-right: 8em;
+        }
+  }
+
+  @media only screen and (min-width: 1920px) {
+        .form-field{
+            padding-left: 14em;
+            padding-right: 14em;
+        }
+
+        .results{
+            margin-left: 10em;
+            margin-right: 10em;
+        }
+  }
+
 
 
 
